--- a/serconf.properties
+++ b/serconf.properties
@@ -1,6 +1,7 @@
-cnmysql: server=localhost;port=3307;database=db_operation;user=root;password=Aforo255#2019
-cnpostgres: Server=localhost;Port=5434;Database=db_invoice;User Id=postgres;Password=Aforo255#2019
+cnmysql: server=localhost;port=3307;database=db_security;user=root;password=Aforo255#2019
+cnpostgres: Server=localhost;Port=5434;Database=db_account;User Id=postgres;Password=Aforo255#2019;
 cnmongo: mongodb://localhost:27018
-mongodb: db_history
-cnsql: Server=localhost,1434;Database=db_security;User Id=sa;Password=Aforo255#2019
+cnsql: Server=localhost,1434;Database=db_account;User Id=sa;Password=Aforo255#2019;
+cnmariadb: server=localhost;port=3310;database=db_notification;user=root;password=Aforo255#2019
+cnredis: localhost
 enviroment: produccion
